--- a/src/Components/Pages/Home/Testimonial/testimonial.css
+++ b/src/Components/Pages/Home/Testimonial/testimonial.css
@@ -4,3 +4,8 @@
       background-repeat: no-repeat;
       background-position-x: 90%;
 }
+
+.testimonial {
+      height: 100%;
+      top: -12rem;
+}
