--- a/src/Components/Pages/Home/HomeAppointment/HomeAppointment.local.css
+++ b/src/Components/Pages/Home/HomeAppointment/HomeAppointment.local.css
@@ -1,10 +1,10 @@
 section {
       background: url("../../../../assets//images/bg.png");
-      background-color: rgba(71, 80, 148, 80%);
+      background-color: rgba(49, 58, 121, 0.8);
 }
 
 .appointment img {
       z-index: 0;
-      height: 636px;
-      top: -18rem;
+      height: 694px;
+      top: -21rem;
 }
